--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "devDependencies": {},
   "dependencies": {
+    "@primitivefi/hardhat-dodoc": "^0.1.1",
     "@tippyjs/react": "^4.2.5",
     "@types/node": "^16.7.10",
     "@types/react": "^17.0.19",
